[package]
name = "firecore-text"
description = "Utility library for pages/lines of text"
version = "0.0.1"
authors = ["Rhys H <donotdoughnut99@gmail.com>"]
edition = "2018"
repository = "https://github.com/fiirecore/text"
license = "MIT"
readme = "README.md"
categories = ["game-development"]
keywords = ["text"]

[dependencies]
serde = { version = "1", features = ["derive"] }